<resources>
    <string-array name="roles">
        <item>--Sign up as a--</item>
        <item>Customer</item>
        <item>Transporter</item>
    </string-array>

    <string-array name="license_types">
        <item>--Select Driving License Type--</item>
        <item>C1 Light Truck</item>
        <item>C Medium Truck</item>
        <item>CE Heavy Truck with trailer</item>
        <item>CE Heavy Goods Vehicle For Transportation of Hazardous Materials</item>
    </string-array>

    <string name="app_name">Ololaa</string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="available_tonage">Available Tonage</string>
    <string name="driver">Driver</string>
    <string name="trailer">Trailer</string>
    <string name="truck_photo">Truck Photo</string>
    <string name="insurance_sticker">Insurance Sticker</string>
    <string name="ntsa_certificate_number">NTSA Certificate Number</string>
    <string name="name">Name</string>
    <string name="truck_allocated">Truck Allocated</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="driving_license_type">Driving License Type</string>
    <string name="upload_passport_photo">Upload Passport Photo</string>
    <string name="id_number">ID Number</string>
    <string name="submit">submit</string>
    <string name="select_tuck">Select Tuck</string>
    <string name="truck">Truck</string>
    <string name="destination">Destination</string>
    <string name="starting_location">Starting Location</string>
    <string name="first_available_date">1st Available Date</string>
    <string name="last_available_date">Last Available Date</string>
    <string name="collection_point">Collection Point</string>
    <string name="delivery_point">Delivery Point</string>
    <string name="unit_weight">Unit Weight in Kgs</string>
    <string name="number_of_units">Number of Units</string>
    <string name="upload_cargo_photo">Upload Cargo Photo</string>
    <string name="cargo_type">Cargo type:</string>
    <string name="tonage">Tonage:</string>
    <string name="cargo_mover">Cargo Mover:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="call_cargo_mover">Call Cargo Mover</string>
    <string name="reject_booking">Reject \n Booking</string>
    <string name="enter_agreed_price">Enter agreed price</string>
    <string name="accept_transport_fee">Accept Transport Fee</string>
    <string name="transporter">Transporter:</string>
    <string name="truck_type">Truck Type</string>
    <string name="kra_pin">KRA Pin</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="role">Role</string>
    <string name="password">Password</string>
    <string name="create_booking">Create Booking</string>
    <string name="tonnes">tonnes</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="depature">Depature</string>
    <string name="first_collection_date">First Collection Date</string>
    <string name="last_collection_date">Last Collection Date</string>
    <string name="bookings">Bookings</string>
    <string name="fleet">Fleet</string>
    <string name="drivers">Drivers</string>
    <string name="payments">Payments</string>
    <string name="post_a_trip">Post a Trip</string>
    <string name="book_a_trip">Book a trip</string>
    <string name="login">Login</string>
    <string name="progress_message">Loading Request Please Wait</string>
    <string name="success">Request successful</string>
    <string name="error">Error. Please try again later</string>
    <string name="no_bookings_available">No bookings available.</string>
    <string name="there_are_no_available_trips_in_your_area">There are no available trips in your area.</string>
    <string name="you_have_not_yet_added_drivers">You have not yet added drivers.</string>
</resources>
