<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.ololaa.ololaa.driver.DriverViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/name"
                android:text="@string/name"
                android:textColorHint="@color/colorPrimary"
                app:Error="@{viewModel.errorName}"
                app:errorEnabled="true"

                >

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/licensePlate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:text="@={viewModel.name}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/truck_allocated"
                android:labelFor="@+id/truck"
                android:text="@string/truck_allocated"
                android:textColorHint="@color/colorPrimary"
                app:Error="@{viewModel.errorTruck}"
                app:errorEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/truck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/truck_allocated"
                    android:inputType="text"
                    android:text="@{viewModel.truck}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/driving_license_number"
                android:text="@string/driving_license_number"
                android:textColorHint="@color/colorPrimary"
                app:Error="@{viewModel.errorDrivingLicenseNumber}"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/drivingLicenseNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/driving_license_number"
                    android:inputType="text"
                    android:text="@={viewModel.drivingLicenseNumber}" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/driving_license_type"
                android:text="@string/driving_license_type"
                android:textColorHint="@color/colorPrimary"
                app:Error="@{viewModel.errorDrivingLicenseType}"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/dlType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/license_types"
                    android:hint="@string/driving_license_type"
                    android:inputType="text"
                    bind:selectedValue="@={viewModel.drivingLicenseType}"
                    bind:selectedValuePosition="@={viewModel.drivingLicenseTypePos}" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/id_number"
                android:text="@string/id_number"
                android:textColorHint="@color/colorPrimary"
                app:Error="@{viewModel.errorIdNumber}"
                app:errorEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/ntsa_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/id_number"
                    android:inputType="text"
                    android:text="@={viewModel.idNumber}"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/upload_passport_photo"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/upload_passport_photo" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/passport_photo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:visibility="@{viewModel.showPassportPhoto? View.VISIBLE : View.GONE}" />

            <android.support.design.button.MaterialButton
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:onClick="@{viewModel.createDriver()}"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</layout>